...
					.padding(20)
					.font(.body)
					.background(getBackgroundColor(colorScheme: colorScheme))
					.onChange(of: todoItems[indexOfItemToEdit].title) { newValue in
						disableSave = (newValue == originalTitle)
					}
					.accessibilityIdentifier("EditTaskTextField")
					.overlay(
						Rectangle()
						.stroke(Color.white)
						.padding(0)
					)
				Spacer()
...
				.padding(5)
				Spacer()
				Button(action: {
					TodoItemsLogic.removeItemWithID(&todoItems, id: todoItems[indexOfItemToEdit].id)
					showEditView = false
				}) {
					Text("Delete Task")
						.font(.headline)
						.padding(20)
						.tint(.red)
				}
			}
		}
...
